<resources>
    <string name="app_name">Calculater</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_sum">+</string>
    <string name="_sub">-</string>
    <string name="_mul">*</string>
    <string name="_res">=</string>
    <string name="_div">/</string>
    <string name="settings">Settings</string>
    <string name="toggle_text_label">Темная тема</string>
    <string name="_c">c</string>
</resources>