<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/wrapper_margin_start"
        android:paddingTop="@dimen/wrapper_margin_top"
        android:paddingStart="@dimen/wrapper_margin_end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mainView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@id/button_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_min="@dimen/screen_min_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_one"
            style="@style/button_numbers"
            android:text="@string/_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_two"
            style="@style/button_numbers"
            android:text="@string/_2"
            app:layout_constraintEnd_toStartOf="@id/button_three"
            app:layout_constraintStart_toEndOf="@id/button_one"
            app:layout_constraintTop_toBottomOf="@id/mainView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_three"
            style="@style/button_numbers"
            android:text="@string/_3"
            app:layout_constraintStart_toEndOf="@id/button_two"
            app:layout_constraintTop_toBottomOf="@id/mainView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_four"
            style="@style/button_numbers"
            android:text="@string/_4"
            app:layout_constraintEnd_toStartOf="@id/button_five"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_five"
            style="@style/button_numbers"

            android:text="@string/_5"
            app:layout_constraintStart_toEndOf="@id/button_four"
            app:layout_constraintTop_toBottomOf="@id/button_one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_six"
            style="@style/button_numbers"
            android:text="@string/_6"
            app:layout_constraintStart_toEndOf="@id/button_five"
            app:layout_constraintTop_toBottomOf="@id/button_one" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_seven"
            style="@style/button_numbers"

            android:text="@string/_7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_four" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_eight"
            style="@style/button_numbers"
            android:text="@string/_8"
            app:layout_constraintEnd_toStartOf="@id/button_three"
            app:layout_constraintStart_toEndOf="@id/button_seven"
            app:layout_constraintTop_toBottomOf="@id/button_four" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_nine"
            style="@style/button_numbers"
            android:text="@string/_9"
            app:layout_constraintStart_toEndOf="@id/button_eight"
            app:layout_constraintTop_toBottomOf="@id/button_four" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_zero"
            style="@style/button_numbers"
            android:text="@string/_0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_seven" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sum"
            style="@style/button_operators"
            android:text="@string/_sum"
            app:layout_constraintStart_toEndOf="@id/button_three"
            app:layout_constraintTop_toBottomOf="@id/mainView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sub"
            style="@style/button_operators"
            android:text="@string/_sub"
            app:layout_constraintStart_toEndOf="@id/button_six"
            app:layout_constraintTop_toBottomOf="@id/button_sum" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_multiply"
            style="@style/button_operators"
            android:text="@string/_mul"
            app:layout_constraintStart_toEndOf="@id/button_nine"
            app:layout_constraintTop_toBottomOf="@id/button_sub" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_result"
            style="@style/button_operators"
            android:text="@string/_res"
            app:layout_constraintStart_toEndOf="@id/button_nine"
            app:layout_constraintTop_toBottomOf="@id/button_nine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_divide"
            style="@style/button_operators"
            android:text="@string/_div"
            app:layout_constraintEnd_toStartOf="@id/button_result"
            app:layout_constraintTop_toBottomOf="@id/button_nine" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_ca"
            style="@style/button_operators"
            android:text="@string/_c"
            app:layout_constraintStart_toEndOf="@id/button_zero"
            app:layout_constraintTop_toBottomOf="@id/button_eight" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>